# Blood-Sonata

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tastatura.txt
.codebuddy/: summary.md
.github/actions/clang-tidy/: action.yml
.github/actions/cppcheck/: action.yml
.github/actions/install-packages/: action.yml
.github/workflows/: cmake.yml
Data/: InputData.txt  InputData1.txt
cmake/: CompilerFlags.cmake
include/: Animation.h  Button.h  Camera.h  EffectManager.h  Enemy.h  Entity.h  Environment.h  Game.h  HealthBar.h  InputManager.h  Particle.h  Player.h  ResourceManager.h  Simulation.h  SimulationConfig.h  SoundManager.h  Spawner.h  UIManager.h  Utils.h  Vector2D.h
include/exceptions/: GameException.h
include/templates/: Pool.h
scripts/: run_cppcheck.sh
src/: Animation.cpp  Button.cpp  Camera.cpp  EffectManager.cpp  Enemy.cpp  Entity.cpp  Game.cpp  HealthBar.cpp  InputManager.cpp  Player.cpp  ResourceManager.cpp  SoundManager.cpp  Spawner.cpp  UIManager.cpp  main.cpp
src/templates/: Pool.cpp
